(library
 (public_name imandrakit)
 (name imandrakit)
 (preprocess
  (pps ppx_deriving.std imandrakit.ser-pack.ppx imandrakit.twine.ppx))
 (flags :standard -open Imandrakit_common)
 (private_modules internal_)
 (libraries
  imandrakit.common
  imandrakit.bytes
  imandrakit.ser
  imandrakit.ser-pack
  imandrakit.twine
  imandrakit.error
  containers
  iter
  logs
  ppx_deriving.runtime
  base64
  mtime
  mtime.clock.os
  ptime
  ptime.clock.os
  uuidm
  unix
  threads
  camlzip
  trace.core
  thread-local-storage
  moonpool
  yojson))
