(library
 (public_name imandrakit)
 (name imandrakit)
 (preprocess
  (pps ppx_deriving.std imandrakit.ser-pack.ppx imandrakit.twine.ppx))
 (flags :standard -open Imandrakit_common)
 (libraries
  imandrakit.common
  imandrakit.bytes
  imandrakit.ser
  imandrakit.ser-pack
  imandrakit.twine
  imandrakit.error
  containers
  iter
  ppx_deriving.runtime
  base64
  mtime
  ptime
  mtime.clock.os
  ptime.clock.os
  uuidm
  unix
  threads
  trace.core
  yojson))
