(library
 (public_name imandrakit)
 (name imandrakit)
 (preprocess
  (pps
   ppx_deriving.std
   imandrakit.twine.ppx
   ppx_deriving_yojson))
 (flags :standard -open Imandrakit_common)
 (libraries
  imandrakit.common
  imandrakit.bytes
  imandrakit.ser
  imandrakit.twine
  imandrakit.error
  containers
  iter
  ppx_deriving.runtime
  base64
  mtime
  ptime
  mtime.clock.os
  ptime.clock.os
  uuidm
  unix
  threads
  trace.core
  yojson))
