(library
 (public_name imandrakit.error)
 (name imandrakit_error)
 (preprocess
  (pps ppx_deriving.std imandrakit.ser-pack.ppx))
 (flags :standard -open Imandrakit_common)
 (synopsis "Error library for imandrakit")
 (libraries imandrakit.common imandrakit.ser imandrakit.ser-pack hmap logs containers))
