(library
 (name imandrakit_leb128)
 (public_name imandrakit.leb128)
 (synopsis
  "LEB128 encoding (https://en.wikipedia.org/wiki/LEB128) for imandrakit")
 (flags :standard -open Imandrakit)
 (libraries imandrakit)
 (foreign_stubs
  (language c)
  (flags :standard -std=c99 -O2)
  (names stubs))
 (ocamlopt_flags :standard -inline 100))
