(library
 (public_name imandrakit-log)
 (name imandrakit_log)
 (preprocess
  (pps ppx_deriving.std imandrakit.ser-pack.ppx imandrakit.twine.ppx))
 (private_modules lock_)
 (flags :standard -open Imandrakit)
 (libraries
  imandrakit
  containers
  iter
  logs
  ptime
  ptime.clock.os
  uuidm
  unix
  trace.core
  yojson))
