(library
 (name imandrakit_metrics)
 (public_name imandrakit.metrics)
 (flags :standard -safe-string -open Imandrakit -open Imandrakit_thread)
 (synopsis "Metrics")
 (optional) ; imandrakit.thread
 (preprocess
  (pps ppx_deriving.std))
 (libraries containers mtime mtime.clock.os imandrakit imandrakit.thread))
