(library
 (name imandrakit_debug_dap)
 (public_name imandrakit-debug.dap)
 (synopsis "DAP types")
 (preprocess (pps ppx_deriving_yojson ppx_deriving.std))
 (libraries yojson ppx_deriving_yojson.runtime))

(rule
 (targets imandrakit_debug_dap.ml)
 (alias gendap)
 (deps
  (:file debugAdapterProtocol.json)
  (:script gen_protocol_ml.js)
  hack_schema.js
  package.json)
 (enabled_if %{env:GEN_DAP=false})
 (mode promote)
 (action
  (progn
   (run npm install)
   (with-stdout-to
    %{targets}
    (run node %{script} %{file})))))

(rule
 (targets imandrakit_debug_dap.mli)
 (alias gendap)
 (deps
  (:file debugAdapterProtocol.json)
  (:script gen_protocol_mli.js)
  hack_schema.js
  package.json)
 (enabled_if %{env:GEN_DAP=false})
 (mode promote)
 (action
  (progn
   (run npm install)
   (with-stdout-to
    %{targets}
    (run node %{script} %{file})))))
