(executable
 (name t1)
 (libraries imandrakit.typereg hex ppx_deriving.runtime)
 (flags :standard -w -34-60)
 (preprocess
  (pps imandrakit.typereg.ppx)))

(rule
 (alias runtest)
 (package imandrakit)
 (action
  (progn
   ; fails, there's a collision
   (with-accepted-exit-codes
    2
    (with-stderr-to
     t1.out
     (run ./t1.exe)))
   (diff t1.expected t1.out))))
